--- a/assets/styles.css
+++ b/assets/styles.css
@@ -127,9 +127,36 @@ nav ul li a:hover {
     -webkit-text-fill-color: transparent;
 }
 
-/* Efeito de underline acompanhando o gradiente */
 nav ul li a:hover::after {
     width: 100%;
     left: 0;
     background: var(--gradient-hover);
+}
+.section-container {
+    margin-top: 70px;
+    text-align: center;
+}
+.slider {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+}
+.slider img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+
+
+@media (max-width: 768px) {
+    .slider img {
+        height: 300px;
+    }
+}
+@media (max-width: 480px) {
+    .slider img {
+        height: 200px;
+    }
 }
