--- a/assets/darkmode.css
+++ b/assets/darkmode.css
@@ -109,3 +109,10 @@ nav ul li a {
     opacity: 1;
     transform: translateX(8px);
 }
+body.dark-mode .slick-dots li button:before {
+    color: black !important; 
+}
+
+body.dark-mode .slick-dots li.slick-active button:before {
+    color: black !important;
+}
