--- a/assets/styles.css
+++ b/assets/styles.css
@@ -149,7 +149,15 @@ nav ul li a:hover::after {
     object-fit: cover;
     border-radius: 10px;
 }
+.toggle-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
+.toggle-label {
+    margin-left: 10px;
+}
 
 
 @media (max-width: 768px) {
@@ -201,17 +209,20 @@ nav ul li a:hover::after {
         background-color: var(--black);
         flex-direction: column;
         align-items: center;
-        padding: 10px 0;
+        padding: 5px 0;
         text-align: end;
         z-index: 9999;
+        width: 100vw;
+        height: 100vh;
     }
     .nav-link{
         text-align: center;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: start;
         gap: 20px;
+
     }
 
     nav ul {
