--- a/assets/styles.css
+++ b/assets/styles.css
@@ -134,6 +134,7 @@ nav ul li a:hover::after {
     left: 0;
     background: var(--gradient-hover);
 }
+
 .section-container {
     margin-top: 70px;
     text-align: center;
@@ -145,7 +146,7 @@ nav ul li a:hover::after {
 }
 .slider img {
     width: 100%;
-    height: 500px;
+    height: auto;
     object-fit: cover;
     border-radius: 10px;
 }
@@ -221,7 +222,6 @@ nav ul li a:hover::after {
         flex-direction: column;
         align-items: center;
         justify-content: start;
-        gap: 20px;
 
     }
 
@@ -251,6 +251,14 @@ nav ul li a:hover::after {
         font-size: 30px;
         color: var(--white);
     }
+    
+nav.nav-link {
+    display: none;
+}
+.toggle-container{
+    margin-top: 5rem;
+}
+
 }
 
 @media (max-width: 480px) {
@@ -308,7 +316,7 @@ nav ul li a:hover::after {
 }
 
 .toggle-menu .menu-icon {
-    font-size: 30px;
+    font-size: 20px;
     color: var(--white);
 }
 
