--- a/assets/darkMode.css
+++ b/assets/darkMode.css
@@ -463,6 +463,7 @@ body.light-mode .footer-logo .highlight {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+/* 🟢 Efeito de Pulsação */
 .whatsapp-float:hover {
     transform: scale(1.1);
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
