--- a/assets/styles.css
+++ b/assets/styles.css
@@ -30,6 +30,70 @@ body {
     font-family: var(--font-primary);
     background-color: var(--light-gray);
     line-height: 1.6;
+    background: url('imgs/middle-left-2.png.png') no-repeat left center;
+    background-size: cover;
+}
+
+.neon-glow.header::before {
+    content: "";
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    background: url('imgs/middle-left-2.png.png') no-repeat left center;
+    top: 0;
+    left: 0;
+    filter: blur(100px);
+    z-index: -1;
+}
+.neon-glow.main::before {
+    content: "";
+    position: absolute;
+    width: 500px;
+    height: 500px;
+    background: url('imgs/middle-left-2.png.png') no-repeat left center;
+    top: 30%;
+    left: 5%;
+    filter: blur(150px);
+    z-index: -1;
+}
+.neon-glow.main::after {
+    content: "";
+    position: absolute;
+    width: 450px;
+    height: 450px;
+    background: url('imgs/middle-left-2.png.png') no-repeat left center;
+    top: 60%;
+    right: 5%;
+    filter: blur(130px);
+    z-index: -1;
+}
+
+.neon-glow.reviews::before {
+    content: "";
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    background: radial-gradient(circle, rgba(148, 0, 211, 0.3), transparent);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    filter: blur(120px);
+    z-index: -1;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+}
+.neon-glow.footer::before {
+    content: "";
+    position: absolute;
+    width: 350px;
+    height: 350px;
+    background: radial-gradient(circle, rgba(75, 0, 130, 0.3), transparent);
+    bottom: 20px;
+    right: 15%;
+    filter: blur(120px);
+    z-index: -1;
 }
 
 header {
@@ -208,6 +272,7 @@ nav ul li a:hover::after {
     }
 
     nav {
+        background: url('imgs/middle-left-2.png.png') no-repeat left center;
         display: none;
         position: absolute;
         top: 30px;
