--- a/assets/darkMode.css
+++ b/assets/darkMode.css
@@ -4,6 +4,54 @@ body {
     color: var(--white);
     transition: background-color 0.6s ease-in-out, color 0.6s ease-in-out;
 }
+body.light-mode .neon-glow.header::before {
+    content: "";
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    background: radial-gradient(circle, rgba(0, 191, 255, 0.5), transparent); /* Azul Neon */
+    top: 0;
+    left: 0;
+    filter: blur(100px);
+    z-index: -1;
+}
+
+body.light-mode .neon-glow.navbar::before {
+    content: "";
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    background: radial-gradient(circle, rgba(0, 229, 255, 0.4), transparent); /* Ciano Neon */
+    top: 0;
+    left: 0;
+    filter: blur(120px);
+    z-index: -1;
+}
+
+body.light-mode .neon-glow.main::before {
+    content: "";
+    position: absolute;
+    width: 500px;
+    height: 500px;
+    background: radial-gradient(circle, rgba(221, 160, 221, 0.4), transparent); /* Lilás Neon */
+    top: 30%;
+    left: 5%;
+    filter: blur(150px);
+    z-index: -1;
+}
+
+body.light-mode .neon-glow.reviews::before {
+    content: "";
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    background: radial-gradient(circle, rgba(255, 215, 0, 0.3), transparent); /* Amarelo Neon */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    filter: blur(120px);
+    z-index: -1;
+}
 
 header {
     background-color: var(--black);
