--- a/assets/styles.css
+++ b/assets/styles.css
@@ -273,6 +273,7 @@ nav ul li a:hover::after {
 
     nav {
         background: url('imgs/middle-left-2.png.png') no-repeat ;
+        background-size: 100% auto;
         display: none;
         position: absolute;
         top: 30px;
